# PUE_GruppeA

./: .gitignore  README.md  main.py  mainII.py  main_2.py  pyproject.toml
src/: analyze_hr_data.py  ekgdata.py  find_peaks.py  load_data.py  load_user_data.py  person.py  power_curve.py  power_curveII.py  power_curve_2.py  read_person_data.py  sort.py
